--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/output.css" />
+    <link rel="stylesheet" href="./css/output.css" />
     <title>Portfolio</title>
   </head>
   <body class="flex bg-ctp-base">
