--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav class="shadow-xl bg-ctp-surface0 h-10">
       <ul class="flex justify-center items-center h-full">
         <li class="mr-6">
-          <a class="text-blue-500 hover:text-blue-800" href="index.html">Accueil</a>
+          <a class="text-green-400C hover:text-blue-800" href="index.html">Accueil</a>
         </li>
         <li class="mr-6">
-          <a class=" hover:text-blue-500" href="competences.html">Compétences</a>
+          <a class=" hover:text-green-400C" href="competences.html">Compétences</a>
         </li>
       </ul>
     </nav>
@@ -22,10 +22,10 @@
         <div class="flex p-3">
           <img src="./ressource/photo_profil.jpg" alt="Photo de Jérémy Berguig" class="rounded-full" />
           <section class="p-3">
-            <p class="text-gray-900 font-medium">Jérémy BERGUIG</p>
-            <p class="text-gray-900 font-medium">Developpeur Full-stack</p>
-            <p class="text-gray-900 font-medium">Tel: <a href="tel:+330640476270">06 40 47 62 70</a></p>
-            <p class="text-gray-900 font-medium">
+            <p class="text-gray-200 font-medium">Jérémy BERGUIG</p>
+            <p class="text-gray-200 font-medium">Developpeur Full-stack</p>
+            <p class="text-gray-200 font-medium">Tel: <a href="tel:+330640476270">06 40 47 62 70</a></p>
+            <p class="text-gray-200 font-medium">
               Mail:
               <a href="mailto:berguigjeremy@gmail.com?subject=Offre"
                 >berguigjeremy@gmail.com</a
@@ -60,27 +60,27 @@
                 <li class="mb-10 ms-4">
                     <div class="absolute w-3 h-3 bg-gray-300 rounded-full mt-1.5 -start-1.5 border border-white"></div>
                     <time class="mb-1 text-sm font-normal leading-none text-gray-500">Octobre 2022 - Aout 2024</time>
-                    <h3 class="text-lg font-semibold text-gray-900">Alternance chez MOM packaging</h3>
-                    <p class="text-base font-normal text-gray-600">Mon alternance chez MOM packaging en même temps que mes études m'a beaucoup apporté. Grâce à celle-ci j'ai pu me former aussi bien d'un point de vue IT qu'OT.</p>
-                    <p class="text-base font-normal text-gray-600">Je suis habitué à travailler en équipe et échanger avec différents clients pour améliorer, modifier un projet.</p>
+                    <h3 class="text-lg font-semibold text-gray-200">Alternance chez MOM packaging</h3>
+                    <p class="text-base font-normal text-gray-900">Mon alternance chez MOM packaging en même temps que mes études m'a beaucoup apporté. Grâce à celle-ci j'ai pu me former aussi bien d'un point de vue IT qu'OT.</p>
+                    <p class="text-base font-normal text-gray-900">Je suis habitué à travailler en équipe et échanger avec différents clients pour améliorer, modifier un projet.</p>
                 </li>             
                 <li class="mb-10 ms-4">
                   <div class="absolute w-3 h-3 bg-gray-300 rounded-full mt-1.5 -start-1.5 border border-white"></div>
                   <time class="mb-1 text-sm font-normal leading-none text-gray-500">Septembre 2021 - Aout 2024</time>
-                  <h3 class="text-lg font-semibold text-gray-900">Début de formation à l'IUT de Montreuil</h3>
-                  <p class="text-base font-normal text-gray-600">Le BUT Informatique de Montreuil est un programme qui m'a permis de me spécialiser dans ce domaine passionnant et en pleine évolution qu'est l'informatique.</p>
-                  <p class="mb-4 text-base font-normal text-gray-600">Cela va m'a permis de m'immerger dans l'univers du developpement web et du developpement d'application, d'acquérir des compétences techniques telle que faire une application pour répondre aux besoin d'un client, gérer une équipe et avoir une vision d'ensemble d'un projet, tout en me permettant de développer mon esprit d'analyse et de résolution de problèmes.</p>
-                  <!-- <a href="#" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700">Learn more <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                  <h3 class="text-lg font-semibold text-gray-200">Début de formation à l'IUT de Montreuil</h3>
+                  <p class="text-base font-normal text-gray-900">Le BUT Informatique de Montreuil est un programme qui m'a permis de me spécialiser dans ce domaine passionnant et en pleine évolution qu'est l'informatique.</p>
+                  <p class="mb-4 text-base font-normal text-gray-900">Cela va m'a permis de m'immerger dans l'univers du developpement web et du developpement d'application, d'acquérir des compétences techniques telle que faire une application pour répondre aux besoin d'un client, gérer une équipe et avoir une vision d'ensemble d'un projet, tout en me permettant de développer mon esprit d'analyse et de résolution de problèmes.</p>
+                  <!-- <a href="#" class="inline-flex items-center px-4 py-2 text-sm font-medium text-gray-200 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:outline-none focus:ring-gray-100 focus:text-blue-700">Learn more <svg class="w-3 h-3 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                   </svg></a> -->
                 </li>
                 <li class="ms-4">
                     <div class="absolute w-3 h-3 bg-gray-300 rounded-full mt-1.5 -start-1.5 border border-white"></div>
                     <time class="mb-1 text-sm font-normal leading-none text-gray-500">Septembre 2019 - Juin 2021</time>
-                    <h3 class="text-lg font-semibold text-gray-900">Bac Maths NSI</h3>
-                    <p class="text-base font-normal text-gray-600">Mes années de première et de terminal au lycée Gustave Eiffel avec les spécialité NSI et Maths mon permis d'acquérir un espprit critique et donner des base en Informatique.</p>
-                    <p class="text-base font-normal text-gray-600">Grâce au mathématique j'ai pu augmenter ma capacité de réfléxion et augmenter le nombre d'outil à ma disposition pour résoudre un problème.</p>
-                    <p class="text-base font-normal text-gray-600">La NSI (Numérique et Science de l'iInformatique), quand à elle m'a donné des notion de base sur l'architecture d'un ordinateur, ce qu'était un langage de programmation et nourris ma passion pour l'informatique.</p>
+                    <h3 class="text-lg font-semibold text-gray-200">Bac Maths NSI</h3>
+                    <p class="text-base font-normal text-gray-900">Mes années de première et de terminal au lycée Gustave Eiffel avec les spécialité NSI et Maths mon permis d'acquérir un espprit critique et donner des base en Informatique.</p>
+                    <p class="text-base font-normal text-gray-900">Grâce au mathématique j'ai pu augmenter ma capacité de réfléxion et augmenter le nombre d'outil à ma disposition pour résoudre un problème.</p>
+                    <p class="text-base font-normal text-gray-900">La NSI (Numérique et Science de l'iInformatique), quand à elle m'a donné des notion de base sur l'architecture d'un ordinateur, ce qu'était un langage de programmation et nourris ma passion pour l'informatique.</p>
                 </li>
             </ol>
           </section>
@@ -97,13 +97,13 @@
                     une application minimale avant de peaufiner les détails et les features.
                     Voir ici:
                     <a
-                      class="text-blue-500 hover:text-blue-800"
+                      class="text-green-400 hover:text-blue-800"
                       href="https://github.com/DUT-Info-Montreuil/SAE-5.A-Front-EDT-APP"
                       >le front</a
                     >
                     et
                     <a
-                      class="text-blue-500 hover:text-blue-800"
+                      class="text-green-400 hover:text-blue-800"
                       href="https://github.com/DUT-Info-Montreuil/SAE-5.A-Back-EDT-APP-FABJM"
                       >le back</a
                     >
@@ -119,7 +119,7 @@
                      Et ainsi perdre moins de temps en travail en groupe. C'est notamment le projet du 
                      semestre 3 qui m'a permis de m'en rendre compte.
                     <a
-                      class="text-blue-500 hover:text-blue-800"
+                      class="text-green-400 hover:text-blue-800"
                       href="https://github.com/DUT-Info-Montreuil/3HArt"
                       >Voir ici</a
                     >
@@ -141,13 +141,13 @@
                     contraint au niveau de la taille du conteneur docker. Nous avons donc 
                     du le créer avec des images plus petites. Voir ici:
                     <a
-                      class="text-blue-500 hover:text-blue-800"
+                      class="text-green-400C hover:text-blue-800"
                       href="https://github.com/DUT-Info-Montreuil/SAE-5.A-Front-EDT-APP"
                       >le front</a
                     >
                     et
                     <a
-                      class="text-blue-500 hover:text-blue-800"
+                      class="text-green-400C hover:text-blue-800"
                       href="https://github.com/DUT-Info-Montreuil/SAE-5.A-Back-EDT-APP-FABJM"
                       >le back</a
                     >
