--- a/src/accueil/index.html
+++ b/src/accueil/index.html
@@ -36,7 +36,7 @@
               href="https://www.linkedin.com/in/j%C3%A9r%C3%A9my-berguig-a07650227/"
               >
                 <img
-                  src="icon/linkedin_logo_icon.svg"
+                  src="../../ressource/icon/linkedin_logo_icon.svg"
                   height="20rem"
                   width="20rem"
                   alt="Linkedin"
@@ -47,7 +47,7 @@
         </div>
         <div class="border-t-[1px] border-gray-500 m-2 p-1">
           <section>
-            <a href="ressource/CV.pdf" download="CV_full-stack_Jérémy_Berguig">CV</a>
+            <a href="../../ressource/CV.pdf" download="CV_full-stack_Jérémy_Berguig">CV</a>
           </section>
         </div>
       </aside>
